--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Doggos</string>
-    <string name="add_fav">Añadir a Favoritos</string>
+    <string name="add_fav">Add to Favorites</string>
 </resources>
